tests/paczka1/fuzzy1/46118248.err
Error in line 2: FjpLVemY A146 35,4
Error in line 12: yU8grzCL S860 28,0
Error in line 27: FjpLVemY S860 46,28
Error in line 21: gr1MfNwE4 A146 38,7
Error in line 29: gr1MfNwE4 S860 21,7
Error in line 26: FjpLVemY S860 42,9
Error in line 34: rSTCF S860 25,0
